--- a/_posts/w05.md
+++ b/_posts/w05.md
@@ -1,9 +1,9 @@
 # Wayfire 0.5.0
 
-I am pleased to announce the release of Wayfire 0.5.0. There has been 247 commits since the last release. Here are some highlights:
+I am pleased to announce the release of Wayfire 0.5.0. There have been 247 commits since the last release. Here are some highlights:
 
 ### Support for always-on-top views
-The new [`wm-actions`](https://github.com/WayfireWM/wayfire/wiki/Configuration#wm-actions) plugin now supports a key and/or a button binding to make a view stay on top of all others on its output. Most of the work was needed for the underlying mechanism, sublayers, which is much more powerful - it is a way to make views stick together, and dock them below, in the middle or above a particular layer.
+The new [`wm-actions`](https://github.com/WayfireWM/wayfire/wiki/Configuration#wm-actions) plugin supports a key and/or a button binding to make a view stay on top of all others on its output. Most of the work was needed for the underlying mechanism, sublayers, which is much more powerful - it is a way to make views stick together, and dock them below, in the middle or above a particular layer.
 
 ### Improvements in workspace switching plugins
 The workspace switching plugin, `vswitch`, now has a better animation which makes it more obvious that the current workspace changes.
@@ -22,7 +22,7 @@ This makes it possible for users to put outputs in power save mode from the comm
 
 ### Bug fixes
 
-There has been the usual big amount of bug fixes. Be it Xwayland, input or plugins - many areas have seen small improvements.
+There have been the usual big amount of bug fixes. Be it Xwayland, input or plugins - many areas have seen small improvements.
 
 ## Breaking changes
 
@@ -30,7 +30,7 @@ There has been some breaking changes in this release, so you may need a minute o
 
 ### `matcher` has been dropped
 
-The matcher plugin was useful for specifying a class of views based on their properties. For example, you can use the fire animation for your dmenu and chrome browser, but use the zoom animation for other windows.
+The `matcher` plugin was useful for specifying a class of views based on their properties. For example, you can use the fire animation for your dmenu and chrome browser, but use the zoom animation for other windows.
 
 This plugin has now been moved into core. Erik Van Hamme has been working on our new `wf-utils` library, which provides this functionality. The syntax has changed a bit though, so consult the [wiki](https://github.com/WayfireWM/wayfire/wiki/Configuration#criteria) for migration.
 
