--- a/_posts/w05.md
+++ b/_posts/w05.md
@@ -10,10 +10,11 @@ The workspace switching plugin, `vswitch`, now has a better animation which make
 Its counterpart for touchpad gestures `vswipe` now has a free movement mode, which lets you swipe though multiple workspaces at once.
 
 ### Latency improvements
-There is now support for the `presentation-time` protocol. It was part of an effort to improve latency in Wayfire with the strategy from [weston](https://ppaalanen.blogspot.com/2015/02/weston-repaint-scheduling.html). It is controlled via the `core/max_render_time` option, which indicates the maximum time wayfire will need to repaint an output.
+There was an effort to improve the latency in Wayfire using the same strategy as [weston](https://ppaalanen.blogspot.com/2015/02/weston-repaint-scheduling.html). To achieve these optimizations Wayfire needs to know how much time it will need for redrawing the outputs. This time is, however, highly dependent on the hardware, enabled plugins, system load, etc. Thus, the `core/max_render_time` option was introduced. It is only a hint for the compositor and indicates how much time Wayfire needs to reserve to redraw an output. Lower values mean that Wayfire will leave more time for clients to update themselves, so lower latency is expected. On the other hand though, very low values (for ex. 1ms) may mean that Wayfire itself will not have enough time to redraw and will then skip a frame, increasing latency.
+If no value works good for you, just use `-1` which disables this optimization altogether.
+Another improvement in this area is the support for the `presentation-time` protocol.
 
 ### `primary-selection` protocol
-
 This protocol is needed for middle-click-paste to work. The implementation of the protocol is mostly done by `wlroots`, so Wayfire needs just a couple of lines for it to work. However, enabling it initially caused crashes in all GTK applications. After hours of debuggingg, it turned out to be a bug in GTK3, and I had to change the ordering of globals (wayland protocol objects) so that the `primary-selection` global is one of the first advertised. Phew!
 
 ### `output-power-management` protocol
