--- a/_posts/w05.md
+++ b/_posts/w05.md
@@ -21,6 +21,18 @@ This protocol is needed for middle-click-paste to work. The implementation of th
 
 This makes it possible for users to put outputs in power save mode from the command line, see [this GitHub issue](https://github.com/WayfireWM/wayfire/issues/455).
 
+### `wayfire-plugins-extra`
+
+Thanks to the work of Scott Moreau this part of the project is going to see its first release ever! It contains a number of new plugins:
+
+1. `annotate` - a plugin for drawing lines and shapes on the screen as an overlay.
+2. `background-view` - lets you run regular programs as a background.
+3. `force-fullscreen` - scales a view so that it becomes fullscreen, especially useful for Xwayland games which do not support resizing.
+4. `mag` - presents you with a magnified view of a part of the output as a separate window.
+5. `water` - draws a water-ripples-like effect on your desktop, very similar to the original compiz water plugin.
+6. `workspace-names` - shows the names of workspaces when switching with the various plugins, like in OpenBox.
+7. `bench`, `showrepaint` - show the actual framerate and the repainted regions of the screen.
+
 ### Bug fixes
 
 There have been the usual big amount of bug fixes. Be it Xwayland, input or plugins - many areas have seen small improvements.
