fixup! add -extra

--- a/_posts/w05.md
+++ b/_posts/w05.md
@@ -21,7 +21,7 @@ This protocol is needed for middle-click-paste to work. The implementation of th
 
 This makes it possible for users to put outputs in power save mode from the command line, see [this GitHub issue](https://github.com/WayfireWM/wayfire/issues/455).
 
-### `wayfire-plugins-extra`
+### wayfire-plugins-extra
 
 Thanks to the work of Scott Moreau this part of the project is going to see its first release ever! It contains a number of new plugins:
 
